## Process this file with automake to produce Makefile.in
## $Id$

INCLUDES = -I$(top_srcdir)/src

noinst_LTLIBRARIES = libmethods.la

libmethods_la_SOURCES = \
 x_gen.c  x_gen.h  x_gen_struct.h x_gen_source.h \
\
 auto.c   auto.h   auto_struct.h \
 arou.c   arou.h   arou_struct.h \
 cstd.c   cstd.h   cstd_struct.h \
 dari.c   dari.h   dari_struct.h \
 dau.c    dau.h    dau_struct.h \
 dgt.c    dgt.h    dgt_struct.h \
 dsrou.c  dsrou.h  dsrou_struct.h \
 dss.c    dss.h    dss_struct.h \
 dstd.c   dstd.h   dstd_struct.h \
 empk.c   empk.h   empk_struct.h \
 empl.c   empl.h   empl_struct.h \
 hinv.c   hinv.h   hinv_struct.h \
 hrb.c    hrb.h    hrb_struct.h \
 hrd.c    hrd.h    hrd_struct.h \
 hri.c    hri.h    hri_struct.h \
 mcorr.c  mcorr.h  mcorr_struct.h \
 ninv.c   ninv.h   ninv_struct.h \
 norta.c  norta.h  norta_struct.h \
 nrou.c   nrou.h   nrou_struct.h \
 srou.c   srou.h   srou_struct.h \
 ssr.c    ssr.h    ssr_struct.h \
 tabl.c   tabl.h   tabl_struct.h tabl_newset.ch \
          tabl_init.ch tabl_sample.ch tabl_debug.ch \
 tdr.c    tdr.h    tdr_struct.h tdr_newset.ch \
          tdr_init.ch tdr_gw_init.ch tdr_ps_init.ch \
          tdr_sample.ch tdr_gw_sample.ch tdr_ps_sample.ch tdr_ia_sample.ch \
          tdr_debug.ch tdr_gw_debug.ch tdr_ps_debug.ch \
 tdrgw.c  tdrgw.h  tdrgw_struct.h \
 unif.c   unif.h   unif_struct.h \
 utdr.c   utdr.h   utdr_struct.h \
 vempk.c  vempk.h  vempk_struct.h \
 vmt.c    vmt.h    vmt_struct.h \
 vnrou.c  vnrou.h  vnrou_struct.h \
\
 mcgibbs.c  mcgibbs.h   mcgibbs_struct.h

noinst_HEADERS = \
 unur_methods_source.h

# clean backup files
CLEANFILES = *~

# clean generated files
MAINTAINERCLEANFILES = \
 Makefile.in

